2002-08-09  Terry Biggs <tbiggs@users.sourceforge.net>

	* changed preferences file to preferences-1.0.conf
	* if preferences-1.0.conf does not exist checks for
	  preferences.conf and loads it. It will then be saved
	  as preferences-1.0.conf.


2002-08-08  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/search.*
	* added backend/search.*
	* added gui/search_dialog.h
	* added gnome/search_dialog.c
	* removed backend/search_.*


2002-07-30  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/spell_ispell.c for ispell support
	* ispell support requires ./configure --enable-with_ispell

2002-07-29  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/spell_pspell.c and main/spell.h
	* moved widgets from settings structure to
	  a widgets structure in gui/gnomesword.h
	* combined backend_first_init() and backend_init_sword()
	  into backend_init()	
	

2002-07-27  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/char_table.*, main/spell.* and main/spell_gui.*
	* added gui/editor_spell.h and gnome/editor_spell.c
	* spell checking now requires pspell but gnomesword will be built
	  without spell checking if configure does not find pspell.
	* gui stuff is removed from backend and main execpt main/settings.h	


2002-07-24  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/swprd.c and main/sword.h
	* moved functions that access backend from main/gs_gnomesword.c
	  to main/sword.c
	* moved main/gs_gnomesword.* to gui/gnomesword.h
	  and gnome/gnomesword.c
	* added src/gui/*.h to EXTRA_DIST in top level Makefile.am


2002-07-23  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/shortcutbar.c and main/shortcutbar.h
	* moved shortcutbar functions from main/gs_gnomesword.c
	  to main/shortcutbar.c



2002-07-22  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/find_dlg_defs.h to gui/find_dlg_defs.h
	* moved change_verse(gchar * key) from gs_gnomesword.c
	  to gnome/main_window.c gui_change_verse(gchar * key).