@@ -6,18 +6,18 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=247
-1=59
-2=47
-3=29
-4=60
-5=119
-6=36
-7=29
-8=540
-9=48
-10=60
-11=32
+0=1
+1=139
+2=62
+3=137
+4=535
+5=99
+6=79
+7=130
+8=70
+9=75
+10=179
+11=228
 12=36
 13=384
 14=57
@@ -45,16 +45,22 @@ ShowLocals=true
 16=
 17=
 
+[breakpoints]
+0=1,,1,3,0,,gnomesword.c,89,64,0,init_gnomesword,,1028945260,
+
 [filelist]
-0=/home/terry/gnomesword/gnomesword1/src/gnome/search_dialog.c
-1=/home/terry/gnomesword/gnomesword1/src/main/search.h
-2=/home/terry/gnomesword/gnomesword1/src/main/search.c
-3=/home/terry/gnomesword/gnomesword1/src/backend/search.h
-4=/home/terry/gnomesword/gnomesword1/src/backend/search.cpp
-5=/home/terry/gnomesword/gnomesword1/src/main/settings.c
-6=/home/terry/gnomesword/gnomesword1/src/main/main.c
-7=/home/terry/gnomesword/gnomesword1/src/backend/properties.h
-8=/home/terry/gnomesword/gnomesword1/src/backend/properties.cpp
+0=/home/terry/gnomesword/gnomesword1/src/gnome/gtkhtml_display.c
+1=/home/terry/gnomesword/gnomesword1/src/gnome/bibletext.c
+2=/home/terry/gnomesword/gnomesword1/src/main/main.c
+3=/home/terry/gnomesword/gnomesword1/src/gnome/gnomesword.c
+4=/home/terry/gnomesword/gnomesword1/src/main/sword.c
+5=/home/terry/gnomesword/gnomesword1/src/main/lists.c
+6=/home/terry/gnomesword/gnomesword1/src/gnome/interlinear.c
+7=/home/terry/gnomesword/gnomesword1/src/backend/properties.cpp
+8=/home/terry/gnomesword/gnomesword1/src/gnome/setup_druid.c
+9=/home/terry/gnomesword/gnomesword1/src/main/settings.c
+10=/home/terry/Projects/gnomesword/src/gs_file.c
+11=/home/terry/gnomesword/gnomesword1/src/main/bibletext.c
 
 [replace_text]
 0=notebook_search
@@ -67,14 +73,14 @@ ShowLocals=true
 7=b->
 
 [find_text]
-0=search_scope_bounds
-1=remove_selection
-2=MODS_LABEL
-3=do_dialog_search
+0=combo_entry1
+1=button_save_mods
+2=rb_one_mod
+3=button_save_results
 4=add_ranges
-5=frame66a
-6=frame66
-7=clist_ranges
+5=search_scope_bounds
+6=remove_selection
+7=MODS_LABEL
 
 [executer args]
 0=newconfigs
